--- a/ai/Ditto/asserts/style.css
+++ b/ai/Ditto/asserts/style.css
@@ -16,6 +16,7 @@ body {
   box-shadow: 0px 0px 10px #999;
   border-radius: 15px;
   font-family: "Google Sans";
+  font-size: 18px;
 }
 .contentblock {
   width: 950px;
@@ -55,6 +56,13 @@ h1 {
 h2 {
   font-size: 30px;
   /* font-weight: 300; */
+}
+.bibtex {
+  background-color: #f8f8f8;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  white-space: nowrap;
+  overflow-x: auto;
 }
 code {
   display: block;
